--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
 - 2.1.0
 gemfile:
 - gemfiles/rails_4.2.gemfile
+- gemfiles/rails_5.0.gemfile
 cache: bundler
 script:
 - bundle exec rake spec
